# HayFactsBot

./: Cargo.toml  LICENSE  README.md
data/: hayfacts.json
src/: main.rs
