[package]
name = "hay-facts"
version = "0.1.0"
authors = ["Conor Farrell <conorf50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = "0.7.3"
serenity = { version = "0.9.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }